--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "next": "^12.2.1",
     "pagination-component": "^1.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "typescript": "^4.7.4"
+    "react-dom": "^18.2.0"
   },
   "scripts": {
     "dev": "next dev",
