--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "next": "^12.2.1",
     "pagination-component": "^1.1.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-player": "^2.10.1"
   },
   "scripts": {
     "dev": "next dev",
